# cpp_seminar_talk

./: .gitignore  LICENSE
examples/cpp/: CMakeLists.txt  measure_rodata_bloat.sh  run_macro_hell_demo.sh
examples/cpp/src/: has_include_demo  has_include_demo.cpp  log_debug_demo.cpp  macro_hell_demo.cpp  main.cpp  pragma_demo.cpp  rodata_bloat_demo.cpp  va_opt_demo.cpp  xmacro_demo.cpp
examples/go/: go.mod  main.go  platform_linux.go  platform_other.go  state.go  state_string.go
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
slides/: ref.bib  slide.tex
